tests/error/struct_errors/stray_docstring.err
Error: Unexpected statement (at $FILE:11:4)
   | 
 9 | class MyStruct:
10 |     x: int
11 |     """Docstring in wrong position"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unexpected statement in struct definition

Guppy compilation failed due to 1 previous error
